[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
byte-unit = "4.0.19"
chrono = "0.4.31"
env_logger = "0.10.0"
file-rotate = "0.7.5"
log = "0.4.20"
mime_guess = "2.0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["fs",  "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.9", features = ["io"] }
tower-http = { version = "0.4.4", features = ["cors", "limit"] }
validator = { version = "0.16.1", features = ["derive"] }
